# xy-sonification

./: .dockerignore  Dockerfile  Makefile  README.md  dashboard.py  data.csv  pyproject.toml
data/: fig3b_multilevel.csv
drafting/: README.md  audio_notebook.py  cli.py  strategies.py
sound_generator/: drafting_notebook.py  strategies.py  utils.py  visualize.py
