[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars-lts-cpu>=1.25.2",
    "ruff>=0.11.0",
    "soundfile>=0.13.1",
    "wave>=0.0.2",
]
